fix navbar alignment

--- a/styles/NavBar.module.css
+++ b/styles/NavBar.module.css
@@ -1,11 +1,8 @@
 .nav {
     position: fixed;
     right: 0;
-    top: 0; 
-    bottom: 0; 
-    margin-top: auto; 
-    margin-bottom: auto; 
-    height: 100px;
+    top: 50%;
+    transform: translate(0%, -50%);
     z-index: 10;
   }
 
